# f2re

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Containerfile.alpine  Containerfile.archlinux  Containerfile.fedora  Containerfile.ubi9  Containerfile.ubuntu  Makefile  Makefile.test  README  README.md  SConstruct  SConstruct.firefly  SConstruct.serenity  SConstruct.test  blish_city.txt  build  build_all  build_test  do_backup  fed2.files  fed2.includes  fed2_restore  ib_start  new_agri  new_bio  new_sys  new_test_sys  notes  test_start  todo
data/: Makefile  routes.xml  syndicates.base  syndicates.xml  template.inf
docs/: containers.md  intro.md
include/: accounts.h  admin.h  ascii_dump_load.h  assign.h  billing.h  blish_city.h  blish_info.h  build_2nd_planet.h  build_3rd_planet.h  build_agri.h  build_airlane.h  build_airport.h  build_anti_agathics.h  build_antigrav.h  build_atmos.h  build_base.h  build_biodiv.h  build_biolab.h  build_canal.h  build_clinic.h  build_coal.h  build_defence.h  build_dole.h  build_family.h  build_fibre.h  build_floating.h  build_fusion.h  build_genetic.h  build_helio.h  build_hospital.h  build_housing.h  build_informer.h  build_insulation.h  build_insurance.h  build_leisure.h  build_metastudio.h  build_mining.h  build_oil.h  build_pension.h  build_phone.h  (+213 more)
maps/: data.mk  template.inf
maps/CVS/: Entries  Repository  Root
maps/aard/: Makefile  bei.exch  bei.inf  bei.loc  bei.msg  space.inf  space.loc  space.msg  star.inf
maps/ability/: Makefile  immortality.exch  immortality.inf  immortality.loc  space.inf  space.loc  star.inf
maps/abode/: Makefile  ourhouse.exch  ourhouse.inf  ourhouse.loc  space.inf  space.loc  star.inf
maps/acme/: Makefile  cabinet.xml  driveup.exch  driveup.inf  driveup.loc  driveup.msg  flower.exch  flower.inf  flower.loc  flower.msg  occyland.exch  occyland.inf  occyland.loc  occyland.msg  occyland.xev  occyland.xob  space.inf  space.loc  space.msg  star.inf
maps/acorn/: Makefile  oak.exch  oak.inf  oak.loc  oak.msg  space.inf  space.loc  space.msg  star.inf
maps/addams/: Makefile  mox.exch  mox.inf  mox.loc  mox.msg  outcast.exch  outcast.inf  outcast.loc  outcast.msg  qzar.exch  qzar.inf  qzar.loc  qzar.msg  space.inf  space.loc  star.inf
maps/aegean/: Makefile  atlantis.exch  atlantis.inf  atlantis.loc  atlantis.msg  mykonos.exch  mykonos.inf  mykonos.loc  mykonos.msg  rhodes.exch  rhodes.inf  rhodes.loc  rhodes.msg  space.inf  space.loc  space.msg  star.inf
maps/aero/: Makefile  electra.exch  electra.inf  electra.loc  electra.msg  flyer.exch  flyer.inf  flyer.loc  flyer.msg  space.inf  space.loc  spirit.exch  spirit.inf  spirit.loc  spirit.msg  star.inf
maps/aevum/: Makefile  lascivio.exch  lascivio.inf  lascivio.loc  lascivio.msg  mortuus.exch  mortuus.inf  mortuus.loc  mortuus.msg  pario.exch  pario.inf  pario.loc  pario.msg  somnium.exch  somnium.inf  somnium.loc  somnium.msg  space.inf  space.loc  space.msg  star.inf  victus.exch  victus.inf  victus.loc  victus.msg  victus.xev  victus.xob
maps/alex/: Makefile  roblox.exch  roblox.inf  roblox.loc  roblox.msg  space.inf  space.loc  space.msg  star.inf
maps/altura/: Makefile  entex.exch  entex.inf  entex.loc  entex.msg  space.inf  space.loc  space.msg  star.inf
maps/aman/: Makefile  space.inf  space.loc  space.msg  star.inf  valinor.exch  valinor.inf  valinor.loc  valinor.msg
maps/amaterasu/: Makefile  gaia.exch  gaia.inf  gaia.loc  space.inf  space.loc  space.msg  star.inf
maps/angle/: Makefile  right.exch  right.inf  right.loc  space.inf  space.loc  space.msg  star.inf
maps/animation/: Makefile  cabinet.xml  dexterslab.exch  dexterslab.inf  dexterslab.loc  dexterslab.msg  space.inf  space.loc  space.msg  star.inf  toontown.exch  toontown.inf  toontown.loc  toontown.msg  yarnball.exch  yarnball.inf  yarnball.loc  yarnball.msg  yarnball.xev  yarnball.xob
maps/ankles/: Makefile  space.inf  space.loc  space.msg  star.inf  talus.exch  talus.inf  talus.loc  talus.msg
maps/aqua/: Makefile  compass.exch  compass.inf  compass.loc  compass.msg  sextant.exch  sextant.inf  sextant.loc  sextant.msg  space.inf  space.loc  space.msg  star.inf
maps/aquarius/: Makefile  aquila.exch  aquila.inf  aquila.loc  aquila.msg  ganymede.exch  ganymede.inf  ganymede.loc  ganymede.msg  space.inf  space.loc  space.msg  star.inf
maps/ara/: Makefile  chiron.exch  chiron.inf  chiron.loc  space.inf  space.loc  star.inf
maps/arcadia/: Makefile  asilomar.exch  asilomar.inf  asilomar.loc  asilomar.msg  asilomar.xev  space.inf  space.loc  space.msg  star.inf
maps/archai/: Makefile  gaia.exch  gaia.inf  gaia.loc  gaia.msg  oceania.exch  oceania.inf  oceania.loc  oceania.msg  space.inf  space.loc  space.msg  star.inf
maps/arctica/: Makefile  ice.exch  ice.inf  ice.loc  space.loc  star.inf
maps/ardeliu/: Makefile  ardeal.exch  ardeal.inf  ardeal.loc  ardeal.msg  carpathia.exch  carpathia.inf  carpathia.loc  carpathia.msg  castlelab.exch  castlelab.inf  castlelab.loc  castlelab.msg  space.inf  space.loc  space.msg  star.inf
maps/armory/: Makefile  duns.exch  duns.inf  duns.loc  duns.msg  smith.exch  smith.inf  smith.loc  smith.msg  space.inf  space.loc  space.msg  star.inf  (+4 more)
scripts/: do_backup  do_backup_old  extra_sys  new_agri  new_bio  new_sys  new_sys.fi  stock_test
src/: SConstruct  SConstruct.test  accounts.cc  admin.cc  ascii_dump_load.cc  assign.cc  billing.cc  blish_city.cc  blish_info.cc  build_2nd_planet.cc  build_3rd_planet.cc  build_agri.cc  build_airlane.cc  build_airport.cc  build_anti-agathics.cc  build_antigrav.cc  build_atmos.cc  build_base.cc  build_biodiv.cc  build_biolab.cc  build_canal.cc  build_clinic.cc  build_coal.cc  build_defence.cc  build_dole.cc  build_family.cc  build_fibre.cc  build_floating.cc  build_fusion.cc  build_genetic.cc  build_helio.cc  build_hospital.cc  build_housing.cc  build_informer.cc  build_insulation.cc  build_insurance.cc  build_leisure.cc  build_metastudio.cc  build_mining.cc  build_oil.cc  (+222 more)
tools/: Makefile  ascii2avatar.cc  avatar.h  avatar2ascii.cc  billing.h  billing2ascii  billing2ascii.cc
(+3356 files in other folders)
