cmake_minimum_required(VERSION 3.2)
project(fed2d)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98")

set(SOURCE_FILES
    include/cmd_accounts.h
    include/assign.h
    include/blish_city.h
    include/blish_info.h
    include/build_2nd_planet.h
    include/build_agri.h
    include/build_airlane.h
    include/build_airport.h
    include/build_anti_agathics.h
    include/build_antigrav.h
    include/build_atmos.h
    include/build_base.h
    include/build_biodiv.h
    include/build_biolab.h
    include/build_canal.h
    include/build_clinic.h
    include/build_coal.h
    include/build_defence.h
    include/build_dole.h
    include/build_family.h
    include/build_fibre.h
    include/build_floating.h
    include/build_fusion.h
    include/build_genetic.h
    include/build_helio.h
    include/build_hospital.h
    include/build_housing.h
    include/build_informer.h
    include/build_insulation.h
    include/build_insurance.h
    include/build_leisure.h
    include/build_metastudio.h
    include/build_mining.h
    include/build_oil.h
    include/build_pension.h
    include/build_phone.h
    include/build_police.h
    include/build_pollution.h
    include/build_port.h
    include/build_radio.h
    include/build_railway.h
    include/build_research.h
    include/build_riot_police.h
    include/build_satellite.h
    include/build_school.h
    include/build_solar.h
    include/build_star.h
    include/build_surveillance.h
    include/build_tachyon.h
    include/build_tech.h
    include/build_telegraph.h
    include/build_terraform.h
    include/build_tquark.h
    include/build_urban.h
    include/build_weather.h
    include/bus_parser.h
    include/bus_register.h
    include/business.h
	include/cmd_buy.h
    include/scr_call.h
    include/cargo.h
    include/cartel.h
    include/category.h
    include/change.h
    include/channel.h
    include/channel_man.h
    include/scr_checkak.h
    include/scr_checkflag.h
    include/scr_checkforowner.h
    include/scr_checkgender.h
    include/scr_checkinsurance.h
    include/scr_checkinv.h
    include/scr_checklastloc.h
    include/scr_checklocflag.h
    include/scr_checkmap.h
    include/scr_checksize.h
    include/scr_checkslithy.h
    include/scr_checkstat.h
    include/scr_checkvariable.h
    include/scr_clearvariable.h
    include/cmd_admin.h
    include/cmd_build.h
    include/cmd_expropriate.h
    include/cmd_give.h
    include/cmd_join.h
    include/cmd_parser.h
    include/cmd_repair.h
    include/cmd_set.h
    include/cmd_xml.h
    include/com_ex_graph_parser.h
    include/com_unit.h
    include/commod_exch_graphs.h
    include/commod_exch_item.h
    include/commod_exch_parser.h
    include/commod_parser.h
    include/commodities.h
    include/commodity_exchange.h
    include/comp_register.h
    include/company.h
    include/company_parser.h
    include/courier.h
    include/scr_create_object.h
    include/db_object.h
    include/db_player.h
    include/delay.h
    include/scr_delayevent.h
    include/depot.h
    include/scr_destroy_object.h
    include/scr_destroyinv.h
    include/disaffection.h
    include/display.h
    include/display_cabinet.h
    include/scr_display_size.h
    include/scr_drop.h
    include/efficiency.h
    include/enhancement.h
    include/equip_parser.h
    include/equipment.h
    include/ev_store.h
    include/event.h
    include/event_number.h
    include/event_parser.h
    include/factory.h
    include/fed.h
    include/fed_object.h
    include/fedmap.h
    include/scr_flipflag.h
    include/forbidden.h
    include/scr_freeze.h
    include/futures_contract.h
    include/futures_exchange.h
    include/galaxy.h
    include/galaxy_map_parser.h
    include/scr_get.h
    include/global_player_vars_table.h
    include/graving_dock.h
    include/happenings.h
    include/help.h
    include/infra.h
    include/infra_parser.h
    include/inventory.h
    include/ipc.h
    include/loc_rec.h
    include/location.h
    include/locker.h
    include/scr_log.h
    include/login.h
    include/louie.h
    include/mail.h
    include/mail_parser.h
    include/map_parser.h
    include/scr_match.h
    include/md5.h
    include/scr_message.h
    include/misc.h
    include/scr_move.h
    include/msg_number.h
    include/navcomp.h
    include/navparse.h
    include/newbie.h
    include/scr_nomatch.h
    include/notices.h
    include/null_ev_num.h
    include/obj_container.h
    include/obj_list.h
    include/object.h
    include/object_parser.h
    include/output_filter.h
    include/para_cat.h
    include/para_parser.h
    include/para_section.h
    include/para_store.h
    include/parcels.h
    include/parcels_parser.h
    include/scr_percent.h
    include/player.h
    include/player_index.h
    include/player_var.h
    include/player_vars_parser.h
    include/player_vars_table.h
    include/population.h
    include/scr_posttoreview.h
    include/price_check.h
    include/production.h
    include/scr_release.h
    include/review.h
    include/riots.h
    include/role_money_sink.h
    include/role_money_source.h
    include/scr_announce.h
    include/scr_changeak.h
    include/scr_changegender.h
    include/scr_changelink.h
    include/scr_changemoney.h
    include/scr_changeplayer.h
    include/scr_changesize.h
    include/scr_changeslithy.h
    include/scr_changestat.h
    include/scr_checkmoney.h
    include/scr_checkplayer.h
    include/scr_checkrank.h
    include/script.h
    include/section.h
    include/sell.h
    include/scr_setvariable.h
    include/share.h
    include/ship.h
    include/ship_builder.h
    include/slithy.h
    include/star.h
    include/star_parser.h
    include/stock_exchange.h
    include/strtok.h
    include/syndicate.h
    include/syndicate_parser.h
    include/teleporter.h
    include/tokens.h
    include/unload.h
    include/warehouse.h
    include/work.h
    include/xml_dump_load.h
    include/xml_parser.h
    src/cmd_accounts.cc
    src/assign.cc
    src/blish_city.cc
    src/blish_info.cc
    src/build_2nd_planet.cc
    src/build_agri.cc
    src/build_airlane.cc
    src/build_airport.cc
    src/build_anti-agathics.cc
    src/build_antigrav.cc
    src/build_atmos.cc
    src/build_base.cc
    src/build_biodiv.cc
    src/build_biolab.cc
    src/build_canal.cc
    src/build_clinic.cc
    src/build_coal.cc
    src/build_defence.cc
    src/build_dole.cc
    src/build_family.cc
    src/build_fibre.cc
    src/build_floating.cc
    src/build_fusion.cc
    src/build_genetic.cc
    src/build_helio.cc
    src/build_hospital.cc
    src/build_housing.cc
    src/build_informer.cc
    src/build_insulation.cc
    src/build_insurance.cc
    src/build_leisure.cc
    src/build_metastudio.cc
    src/build_mining.cc
    src/build_oil.cc
    src/build_pension.cc
    src/build_phone.cc
    src/build_police.cc
    src/build_pollution.cc
    src/build_port.cc
    src/build_radio.cc
    src/build_railway.cc
    src/build_research.cc
    src/build_riot_police.cc
    src/build_satellite.cc
    src/build_school.cc
    src/build_solar.cc
    src/build_star.cc
    src/build_surveillance.cc
    src/build_tachyon.cc
    src/build_tech.cc
    src/build_telegraph.cc
    src/build_terraform.cc
    src/build_tquark.cc
    src/build_urban.cc
    src/build_weather.cc
    src/bus_parser.cc
    src/bus_register.cc
    src/business.cc
	 src/cmd_buy.cc
    src/scr_call.cc
    src/cargo.cc
    src/cartel.cc
    src/category.cc
    src/change.cc
    src/channel.cc
    src/channel_man.cc
    src/scr_checkflag.cc
    src/scr_checkforowner.cc
    src/scr_checkgender.cc
    src/scr_checkinsurance.cc
    src/scr_checkinv.cc
    src/scr_checklastloc.cc
    src/scr_checklocflag.cc
    src/scr_checkmap.cc
    src/scr_checksize.cc
    src/scr_checkslithy.cc
    src/scr_checkstat.cc
    src/scr_checkvariable.cc
    src/scr_clearvariable.cc
    src/cmd_admin.cc
    src/cmd_build.cc
    src/cmd_expropriate.cc
    src/cmd_give.cc
    src/cmd_join.cc
    src/cmd_parser.cc
    src/cmd_repair.cc
    src/cmd_set.cc
    src/cmd_xml.cc
    src/com_ex_graph_parser.cc
    src/com_unit.cc
    src/commod_exch_graphs.cc
    src/commod_exch_item.cc
    src/commod_exch_parser.cc
    src/commod_parser.cc
    src/commodities.cc
    src/commodity_exchange.cc
    src/comp_register.cc
    src/company.cc
    src/company_parser.cc
    src/courier.cc
    src/scr_create_object.cc
    src/db_object.cc
    src/delay.cc
    src/scr_delayevent.cc
    src/depot.cc
    src/scr_destroy_object.cc
    src/scr_destroyinv.cc
    src/disaffection.cc
    src/display.cc
    src/display_cabinet.cc
    src/scr_display_size.cc
    src/scr_drop.cc
    src/efficiency.cc
    src/enhancement.cc
    src/equip_parser.cc
    src/ev_store.cc
    src/event.cc
    src/event_number.cc
    src/event_parser.cc
    src/factory.cc
    src/fed.cc
    src/fed_object.cc
    src/fedmap.cc
    src/scr_flipflag.cc
    src/forbidden.cc
    src/scr_freeze.cc
    src/futures_contract.cc
    src/futures_exchange.cc
    src/galaxy.cc
    src/galaxy_map_parser.cc
    src/scr_get.cc
    src/global_player_vars_table.cc
    src/graving_dock.cc
    src/happenings.cc
    src/help.cc
    src/infra.cc
    src/infra_parser.cc
    src/inventory.cc
    src/ipc.cc
    src/location.cc
    src/locker.cc
    src/scr_log.cc
    src/login.cc
    src/louie.cc
    src/mail.cc
    src/mail_parser.cc
    src/main.cc
    src/map_parser.cc
    src/scr_match.cc
    src/md5.cc
    src/scr_message.cc
    src/misc.cc
    src/scr_move.cc
    src/msg_number.cc
    src/navcomp.cc
    src/navparse.cc
    src/newbie.cc
    src/scr_nomatch.cc
    src/notices.cc
    src/null_ev_num.cc
    src/obj_container.cc
    src/object.cc
    src/object_parser.cc
    src/output_filter.cc
    src/para_cat.cc
    src/para_parser.cc
    src/para_section.cc
    src/para_store.cc
    src/parcels.cc
    src/parcels_parser.cc
    src/scr_percent.cc
    src/player.cc
    src/player_index.cc
    src/player_var.cc
    src/player_vars_parser.cc
    src/player_vars_table.cc
    src/population.cc
    src/scr_posttoreview.cc
    src/price_check.cc
    src/production.cc
    src/scr_release.cc
    src/review.cc
    src/riots.cc
    src/scr_announce.cc
    src/scr_changegender.cc
    src/scr_changelink.cc
    src/scr_changemoney.cc
    src/scr_changeplayer.cc
    src/scr_changesize.cc
    src/scr_changeslithy.cc
    src/scr_changestat.cc
    src/scr_checkmoney.cc
    src/scr_checkplayer.cc
    src/scr_checkrank.cc
    src/script.cc
    src/section.cc
    src/sell.cc
    src/scr_setvariable.cc
    src/share.cc
    src/ship.cc
    src/ship_builder.cc
    src/slithy.cc
    src/star.cc
    src/star_parser.cc
    src/strtok.cc
    src/syndicate.cc
    src/syndicate_parser.cc
    src/teleporter.cc
    src/tokens.cc
    src/unload.cc
    src/warehouse.cc
    src/work.cc
    src/xml_dump_load.cc
    src/xml_parser.cc)

include_directories(include)
include_directories(/usr/include/libdb4)

add_executable(fed2d ${SOURCE_FILES})
target_compile_options(fed2d PRIVATE -Wall -Wcast-qual -Wcast-align -Wwrite-strings -Wpointer-arith -O2 -DDEVELOPMENT)
target_link_libraries(fed2d -L/usr/lib64/libdb4 -lexpat -ldb_cxx -lsqlite3)